fixed an off-center Kanye problem

--- a/frontend/src/styles/pages/_potential-causes.scss
+++ b/frontend/src/styles/pages/_potential-causes.scss
@@ -247,7 +247,9 @@ body.potential-causes {
             text-align: center;
             color: #ADB2B6;
             line-height: 20px !important;
-            margin-left: 5px !important;
+            // margin-left: 5px !important;
+            margin-left: auto;
+            margin-right: auto;
             
         }
 
